--- a/app/views/date-range-option-one.html
+++ b/app/views/date-range-option-one.html
@@ -1,3 +1,4 @@
+<!--Date range option one where the change time period is beind the accordion-->
 {% extends "layout.html" %}
 
 {% block pageTitle %}
