--- a/app/views/date-range-option-two.html
+++ b/app/views/date-range-option-two.html
@@ -1,3 +1,4 @@
+<!--Date range option one where the change time period is set between two text inputs-->
 {% extends "layout.html" %}
 
 {% block pageTitle %}
