--- a/app/views/multi-select.html
+++ b/app/views/multi-select.html
@@ -6,6 +6,14 @@
 
 {% block beforeContent %}
   {% include "includes/phase-banner.html" %}
+  <!--A subnav component to look at a way of going between pages in the content data app, for example when accessing the previous or saved searches-->
+  <nav class="govuk-subnav">
+    <ul>
+      <li>
+        <a href="#">Previous searches</a>
+      </li>
+    </ul>
+  </nav>
   </div>
   <div class="govuk-width-container govuk-wider-container">
 {% endblock %}
