--- a/app/views/single-view.html
+++ b/app/views/single-view.html
@@ -1,3 +1,4 @@
+<!--Single view which shows the full analytics for an individual page-->
 {% extends "layout.html" %}
 {% block pageTitle %}
   Page name
