--- a/app/views/your-applications.html
+++ b/app/views/your-applications.html
@@ -1,7 +1,9 @@
+<!--Your applications or overview, the page that comes before the content data app-->
+
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Sign in
+  Your applications
 {% endblock %}
 
 {% block beforeContent %}
@@ -27,8 +29,9 @@
       </p>
     </div>
     <div class="govuk-grid-column-one-third-from-desktop">
-      <hr class="govuk-blue-section-break" />
+      <hr class="govuk-blue-section-break"/>
       <ul class="govuk-list">
+        <!--Need to create the screens for changing email and the 2-step verification process-->
         <li>
           <a class="govuk-link" href="#">Change your email or password</a>
         </li>
