--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -109,10 +109,10 @@ $govuk-assets-path: '/govuk/assets/';
   height: 225px;
   overflow: scroll;
   position: relative;
-padding: 0 0 10px;
-margin-bottom: 10px;
-margin-top: 8px;
-border-bottom: 1px solid #b1b4b6;
+  padding: 0 0 10px;
+  margin-bottom: 10px;
+  margin-top: 8px;
+  border-bottom: 1px solid #b1b4b6;
 }
 
 .govuk-fieldset-max-height .govuk-checkboxes{
@@ -121,14 +121,14 @@ border-bottom: 1px solid #b1b4b6;
 
 @media (min-width: 48.0625em) {
     .govuk-fieldset-max-height ::-webkit-scrollbar {
-        -webkit-appearance:none;
-        width: 7px
+      -webkit-appearance:none;
+      width: 7px
     }
 
     .govuk-fieldset-max-height ::-webkit-scrollbar-thumb {
-        border-radius: 4px;
-        background-color: rgba(0,0,0,0.5);
-        -webkit-box-shadow: 0 0 1px rgba(255,255,255,0.87)
+      border-radius: 4px;
+      background-color: rgba(0,0,0,0.5);
+      -webkit-box-shadow: 0 0 1px rgba(255,255,255,0.87)
     }
 }
 
@@ -191,7 +191,7 @@ border-bottom: 1px solid #b1b4b6;
     display: table-cell;
     position: relative;
     padding: .3125em;
-        font-family: "GDS Transport", arial, sans-serif;
+    font-family: "GDS Transport", arial, sans-serif;
     border: 1px solid #505a5f;
     border-radius: .3125em;
     background-color: #f3f2f1
@@ -294,10 +294,7 @@ border-bottom: 1px solid #b1b4b6;
 
 .govuk-related-actions {
     background-color: #f3f2f1;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 15px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25
@@ -377,4 +374,29 @@ border-bottom: 1px solid #b1b4b6;
   .govuk-header__content{
     width: 57%
   }
+}
+
+.experiment-row{
+  border-bottom: 1px solid #b1b4b6
+}
+
+
+/*Add a subnav item under the phase banner. It needs the mobile styling.*/
+.govuk-subnav ul{
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.govuk-subnav ul li:nth-child(1){
+  padding-right: 12px;
+}
+
+.govuk-subnav ul li:not(:nth-child(1)){
+  padding: 0 12px;
+}
+
+.govuk-subnav{
+  border-bottom: 1px solid #b1b4b6;
 }
