--- a/app/views/includes/filters-option-one.html
+++ b/app/views/includes/filters-option-one.html
@@ -83,34 +83,34 @@
           </div>
         </div>
       </div>
-  </details>
-<div class="govuk-form-group">
-<label class="govuk-label" for="sort">
-Search for a title or url
-<input class="govuk-input" id="event-name" name="event-name" type="text">
-</label>
-</div>
-
+</details>
 
 <div class="govuk-form-group">
-<label class="govuk-label" for="sort">
-Document type
-</label>
-<select class="govuk-select" id="sort" name="sort">
-<option value="published">All document types</option>
-<option value="updated" selected></option>
-<option value="views">AAIB Report</option>
-<option value="comments">About</option>
-<option value="comments">About our services</option>
-<option value="comments">Access and opening</option>
-<option value="comments">Accessible documents policy</option>
-<option value="comments">Answer</option>
-<option value="comments">Asylum support decision</option>
-<option value="comments">Authored article</option>
-</select>
+  <label class="govuk-label" for="sort">
+    Search for a title or url
+    <input class="govuk-input" id="event-name" name="event-name" type="text">
+  </label>
 </div>
 
-  <div class="govuk-form-group">
+<div class="govuk-form-group">
+  <label class="govuk-label" for="sort">
+    Document type
+  </label>
+  <select class="govuk-select" id="sort" name="sort">
+    <option value="published">All document types</option>
+    <option value="updated" selected></option>
+    <option value="views">AAIB Report</option>
+    <option value="comments">About</option>
+    <option value="comments">About our services</option>
+    <option value="comments">Access and opening</option>
+    <option value="comments">Accessible documents policy</option>
+    <option value="comments">Answer</option>
+    <option value="comments">Asylum support decision</option>
+    <option value="comments">Authored article</option>
+  </select>
+</div>
+
+<div class="govuk-form-group">
   <label class="govuk-label" for="sort">
     Organisation
   </label>
@@ -126,14 +126,11 @@ Document type
   </select>
 </div>
 
-
 <div class="govuk-button-group">
-<button class="govuk-button" data-module="govuk-button">
-Filter
-</button>
-
-<a class="govuk-link" href="#">Clear all filters</a>
+  <button class="govuk-button" data-module="govuk-button">Filter</button>
+  <a class="govuk-link" href="#">Clear all filters</a>
 </div>
+
 <hr>
 
 <p class="govuk-body-s govuk-!-margin-top-6"> <a class="govuk-link" href="#">Download all CSV file</a> </p>
