--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,15 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-xl">Content data app prototype</h1>
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-l">
+          {{govukTag({
+            text: "Needs testing",
+            classes: "govuk-tag--yellow"
+          })}}
+        </span>
+        Content data app prototype
+      </h1>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/sign-in.html">End to end journey</a></li>
       </ul>
@@ -21,6 +29,7 @@
         <li><a href="/date-range-option-one.html">Date range option one</a></li>
         <li><a href="/date-range-option-two.html">Date range option two</a></li>
         <li><a href="/multi-select.html">Multi select</a></li>
+        <li><a href="/alternative-view.html">Alternative view idea</a></li>
       </ul>
     </div>
   </div>
