--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8809,10 +8809,7 @@ x:-moz-any-link {
 
 .govuk-related-actions {
   background-color: #f3f2f1;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 15px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -8884,4 +8881,27 @@ x:-moz-any-link {
   .govuk-header__content {
     width: 57%;
   }
+}
+.experiment-row {
+  border-bottom: 1px solid #b1b4b6;
+}
+
+/*Add a subnav item under the phase banner. It needs the mobile styling.*/
+.govuk-subnav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.govuk-subnav ul li:nth-child(1) {
+  padding-right: 12px;
+}
+
+.govuk-subnav ul li:not(:nth-child(1)) {
+  padding: 0 12px;
+}
+
+.govuk-subnav {
+  border-bottom: 1px solid #b1b4b6;
 }
